<resources>
    <string name="app_name">Septech</string>
    <string name="headline1">Let\'s get you started!</string>
    <string name="headline2">Welcome, user!</string>
    <string name="body1">Already have an account? Login</string>
    <string name="or">OR</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="body2">Don’t have an account? Register</string>
    <string name="sampleTxt2">Connect your device now!</string>

    <string name="modeStandard">Standard</string>
    <string name="modeDual">Dual</string>

    <!--    intent keys-->
    <string name="isStartedForResultKey">ExpectsResult</string>
    <string name="sampleIndexKey">SampleIndex</string>
    <string name="modeKey">Mode</string>

<!--    when sample index is not required-->
    <string name="concentrationKey">Concentration</string>
    <string name="rfArrayKey">RfArray</string>

<!--    when sample index is required-->
    <string name="concentration1Key">Concentration1</string>
    <string name="rfArray1Key">RfArray1</string>
    <string name="concentration2Key">Concentration2</string>
    <string name="rfArray2Key">RfArray2</string>

<!--    spinner items-->
    <string-array name="graphTypesDual">
        <item>Equation 1</item>
        <item>Equation 2</item>
        <item>Equation 3</item>
    </string-array>
    <string-array name="graphTypesStandard">
        <item>Equation 1</item>
        <item>Equation 2</item>
        <item>Equation 3</item>
        <item>Equation 4</item>
    </string-array>
</resources>