<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".20"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".80"/>
    <!--1st part-->
    <ImageView
        android:id="@+id/ellipse"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guide1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="428dp"
        android:layout_height="0dp"
        android:layout_marginTop="-136dp"
        android:src="@drawable/backgroung"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        android:text="@string/headline2"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:lineSpacingExtra="3sp"
        android:translationY="-1.41sp"
        android:textSize="24sp"/>
    <!--2nd half-->
    <ImageView
        android:id="@+id/img"
        app:layout_constraintTop_toBottomOf="@+id/guide1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="135dp"
        android:layout_height="135dp"
        android:src="@drawable/lab_img"/>
    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintTop_toBottomOf="@+id/img"
        android:id="@+id/filledEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10pt"
        android:layout_marginTop="3pt"
        android:hint="@string/email"
        android:textColorHint="@android:color/black"
        app:hintTextColor="@android:color/black"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:drawableEnd="@drawable/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filledPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/filledEmail"
        android:layout_marginTop="3pt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10pt"
        android:textColorHint="@android:color/black"
        app:hintTextColor="@android:color/black"
        android:hint="@string/password"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:drawableEnd="@drawable/lock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@id/filledPassword"
        app:layout_constraintBottom_toTopOf="@id/guide2"
        android:layout_marginHorizontal="10pt"
        android:textColor="@android:color/black"
        android:background="@drawable/btn_background"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <!--3rd half-->
    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/guide2"
        android:text="@string/or"
        android:textSize="25sp"
        android:letterSpacing="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#1FB25F"/>
    <View
        android:id="@+id/line_1"
        android:layout_width="86dp"
        android:layout_height="3dp"
        android:background="@drawable/line"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintBottom_toBottomOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/or"
        app:layout_constraintHorizontal_bias="0.75"
        />
    <View
        android:id="@+id/line_2"
        android:layout_width="86dp"
        android:layout_height="3dp"
        android:background="@drawable/line"
        app:layout_constraintTop_toTopOf="@id/or"
        app:layout_constraintBottom_toBottomOf="@id/or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/or"
        app:layout_constraintHorizontal_bias="0.25"
        />
    <ImageView
        android:id="@+id/google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/or"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        android:src="@drawable/google"
        />
    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/body2"
        android:textSize="14sp"
        android:textColor="#DE000000"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>